[gd_scene load_steps=3 format=3 uid="uid://bc56rv1yi7sk2"]

[ext_resource type="Script" path="res://peerConnections.gd" id="1_sccm7"]
[ext_resource type="Script" path="res://ChatScroll.gd" id="2_5bl6g"]

[node name="PeerTester" type="Node2D"]
script = ExtResource("1_sccm7")

[node name="sendMessage" type="Button" parent="."]
offset_left = 403.0
offset_top = 112.0
offset_right = 511.0
offset_bottom = 144.0
size_flags_horizontal = 4
size_flags_vertical = 4
text = "Send"

[node name="peerCreateOffer" type="Button" parent="."]
offset_left = 125.0
offset_top = 167.0
offset_right = 290.0
offset_bottom = 218.0
text = "Create peer offer"

[node name="peerReadOffer" type="Button" parent="."]
offset_left = 381.0
offset_top = 260.0
offset_right = 489.0
offset_bottom = 303.0
text = "Read offer"

[node name="peerReadAnswer" type="Button" parent="."]
offset_left = 379.0
offset_top = 522.0
offset_right = 501.0
offset_bottom = 572.0
text = "Read answer"

[node name="peerStatuses" type="VBoxContainer" parent="."]
offset_right = 187.0
offset_bottom = 85.0
metadata/_edit_group_ = true

[node name="ConnectionState" type="HBoxContainer" parent="peerStatuses"]
layout_mode = 2

[node name="StateLabel" type="Label" parent="peerStatuses/ConnectionState"]
layout_mode = 2
text = "Connection State: "

[node name="peerConnectionStateValue" type="Label" parent="peerStatuses/ConnectionState"]
unique_name_in_owner = true
layout_mode = 2
text = "N/A"

[node name="GatheringState" type="HBoxContainer" parent="peerStatuses"]
layout_mode = 2

[node name="StateLabel" type="Label" parent="peerStatuses/GatheringState"]
layout_mode = 2
text = "Gathering State: "

[node name="peerGatheringStateValue" type="Label" parent="peerStatuses/GatheringState"]
unique_name_in_owner = true
layout_mode = 2
text = "N/A"

[node name="SignalingState" type="HBoxContainer" parent="peerStatuses"]
layout_mode = 2

[node name="StateLabel" type="Label" parent="peerStatuses/SignalingState"]
layout_mode = 2
text = "Signaling State: "

[node name="peerSignalingStateValue" type="Label" parent="peerStatuses/SignalingState"]
unique_name_in_owner = true
layout_mode = 2
text = "N/A"

[node name="peerNew" type="Button" parent="."]
offset_left = 15.0
offset_top = 106.0
offset_right = 98.0
offset_bottom = 137.0
text = "Create peer"

[node name="closePeer" type="Button" parent="."]
offset_left = 15.0
offset_top = 146.0
offset_right = 98.0
offset_bottom = 177.0
text = "Close peer"

[node name="sdp" type="TextEdit" parent="."]
unique_name_in_owner = true
offset_left = 53.0
offset_top = 339.0
offset_right = 370.0
offset_bottom = 487.0
placeholder_text = "<no offer/answer created yet>"
editable = false
deselect_on_focus_loss_enabled = false
wrap_mode = 1

[node name="sdpOffer" type="TextEdit" parent="."]
unique_name_in_owner = true
offset_left = 56.0
offset_top = 232.0
offset_right = 370.0
offset_bottom = 328.0
placeholder_text = "<place offer here>"
deselect_on_focus_loss_enabled = false
wrap_mode = 1

[node name="sdpAnswer" type="TextEdit" parent="."]
unique_name_in_owner = true
offset_left = 53.0
offset_top = 499.0
offset_right = 367.0
offset_bottom = 595.0
placeholder_text = "<place answer here>"
deselect_on_focus_loss_enabled = false
wrap_mode = 1

[node name="ChatMessage" type="TextEdit" parent="."]
unique_name_in_owner = true
offset_left = 186.0
offset_top = 108.0
offset_right = 391.0
offset_bottom = 141.0

[node name="ScrollContainer" type="ScrollContainer" parent="."]
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 550.0
offset_top = 31.0
offset_right = 792.0
offset_bottom = 613.0
grow_vertical = 0
size_flags_vertical = 8
follow_focus = true
script = ExtResource("2_5bl6g")

[node name="Chat" type="VBoxContainer" parent="ScrollContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 10

[node name="Button" type="Button" parent="."]
offset_left = 379.0
offset_top = 388.0
offset_right = 541.0
offset_bottom = 435.0
text = "Copy To Clipboard"

[connection signal="pressed" from="sendMessage" to="." method="sendMessage"]
[connection signal="pressed" from="peerCreateOffer" to="." method="createOffer"]
[connection signal="pressed" from="peerReadOffer" to="." method="readOffer"]
[connection signal="pressed" from="peerReadAnswer" to="." method="readAnswer"]
[connection signal="pressed" from="peerNew" to="." method="createPeer"]
[connection signal="pressed" from="closePeer" to="." method="closePeer"]
